[iOS] Layout tests sometimes assert under -[WKContentView hasContent] https://bugs.webkit.org/show_bug.cgi?id=213656 <rdar://problem/64818648>

Reviewed by Tim Horton.

Make it safe to invoke `-[WKContentView hasContent]` when post-layout data is not present, and there is no
ranged or caret selection. Some editing layout tests on iOS tend to hit the post-layout data assertion due to
the callout bar presentation callback firing while we reset the test harness to a consistent state (and spin the
runloop while doing so).

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView hasContent]):


Canonical link: https://commits.webkit.org/226463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263591 268f45cc-cd09-0410-ab3c-d52691b4dbfc